[package]
name = "beanstalkrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bytes = "1.4.0"
futures-util = { version = "0.3.28", features = ["sink"] }
tokio = { version = "1.28.0", features = ["macros", "io-util", "rt-multi-thread", "net"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
